# agent-team

./: README.md  README.npm.md  TUTORIAL.md  package-lock.json  package.json
.claude/: settings.json  settings.local.json
.claude/skills/: SKILL-INDEX.md  skills-registry.yaml
config/: roles.yaml
docker/: README.md  docker-compose.yml
docker/simplemem/: Dockerfile  pyproject.toml
docker/simplemem/src/: __init__.py  server.py
docker/simplemem/src/embeddings/: __init__.py  embeddings.py
docker/simplemem/src/pipeline/: __init__.py  intent_retrieval.py  online_synthesis.py  semantic_compression.py
docker/simplemem/src/storage/: __init__.py  lancedb_store.py  sqlite_metadata.py
docs/: 01-architecture.md  02-setup-guide.md  03-skills-guide.md  04-workflows.md  05-model-strategy.md  06-extend-guide.md  07-quick-reference.md  08-skills-discovery.md  README.md  rqm.md
presets/: nestjs-api.yaml  react-full-stack.yaml  vue-minimal.yaml
scripts/: agent.sh  postinstall.js
src/: index.js
src/commands/: add.js  init.js  list.js  projects.js  remove.js  setup-hooks.js
src/interactive/: prompts.js
src/server/: index.js
src/ui/: agents.html  index.html  roles.html  skills.html
src/utils/: file-utils.js  global-registry.js  skill-resolver.js  skill-scanner.js
templates/: CLAUDE.md.tmpl  MEMORY.md.tmpl  agent.md.tmpl  knowledge.md.tmpl  meeting-notes.md.tmpl
templates/code/: nestjs-controller.ts.tmpl  nestjs-dto.ts.tmpl  nestjs-service.ts.tmpl  react-component.tsx.tmpl  react-hook.ts.tmpl  test.spec.ts.tmpl  vue-component.vue.tmpl  vue-composable.ts.tmpl
(+128 files in other folders)
